--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Scott Bromander, Kris Szafranski",
   "license": "ISC",
   "dependencies": {
+    "alertifyjs": "^1.10.0",
     "angular": "^1.6.4",
     "angular-animate": "^1.6.4",
     "angular-aria": "^1.6.4",
@@ -17,6 +18,7 @@
     "angular-material-expansion-panel": "^0.7.2",
     "angular-material-icons": "^0.7.1",
     "angular-route": "^1.6.4",
+    "angular-xeditable": "^0.7.1",
     "bcrypt": "^0.8.5",
     "body-parser": "^1.13.3",
     "bootstrap": "^3.3.5",
