--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "angular": "^1.6.4",
     "angular-animate": "^1.6.4",
     "angular-aria": "^1.6.4",
+    "angular-css": "^1.0.8",
     "angular-material": "^1.1.4",
     "angular-material-expansion-panel": "^0.7.2",
     "angular-material-icons": "^0.7.1",
