--- a/package.json
+++ b/package.json
@@ -7,33 +7,33 @@
     "test": "nodemon server/app.js",
     "start": "node server/app.js"
   },
-  "author": "Scott Bromander, Kris Szafranski",
+  "author": "Brianna Dickman",
   "license": "ISC",
   "dependencies": {
-    "alertifyjs": "^1.10.0",
-    "angular": "^1.6.4",
-    "angular-animate": "^1.6.4",
-    "angular-aria": "^1.6.4",
-    "angular-css": "^1.0.8",
-    "angular-material": "^1.1.4",
-    "angular-material-expansion-panel": "^0.7.2",
-    "angular-material-icons": "^0.7.1",
-    "angular-route": "^1.6.4",
-    "angular-xeditable": "^0.7.1",
-    "bcrypt": "^0.8.5",
-    "body-parser": "^1.13.3",
-    "bootstrap": "^3.3.5",
-    "express": "^4.13.1",
-    "express-session": "^1.13.0",
-    "grunt": "^0.4.5",
-    "grunt-contrib-copy": "^0.8.2",
-    "grunt-contrib-uglify": "^0.9.2",
-    "grunt-contrib-watch": "^1.0.0",
-    "hammerjs": "^2.0.8",
-    "jquery": "^2.1.4",
-    "mongoose": "^4.4.6",
-    "passport": "^0.2.2",
-    "passport-local": "^1.0.0",
-    "path": "^0.11.14"
+    "alertifyjs": "1.10.0",
+    "angular": "1.6.4",
+    "angular-animate": "1.6.4",
+    "angular-aria": "1.6.4",
+    "angular-css": "1.0.8",
+    "angular-material": "1.1.4",
+    "angular-material-expansion-panel": "0.7.2",
+    "angular-material-icons": "0.7.1",
+    "angular-route": "1.6.4",
+    "angular-xeditable": "0.7.1",
+    "bcrypt": "0.8.5",
+    "body-parser": "1.13.3",
+    "bootstrap": "3.3.5",
+    "express": "4.13.1",
+    "express-session": "1.13.0",
+    "grunt": "0.4.5",
+    "grunt-contrib-copy": "0.8.2",
+    "grunt-contrib-uglify": "0.9.2",
+    "grunt-contrib-watch": "1.0.0",
+    "hammerjs": "2.0.8",
+    "jquery": "2.1.4",
+    "mongoose": "4.4.6",
+    "passport": "0.2.2",
+    "passport-local": "1.0.0",
+    "path": "0.11.14"
   }
 }
